# serializer version: 1
# name: test__explanation_snapshot[1]
  Explanation:
  	CausalArgs: <class 'rex_xai.input.config.CausalArgs'>
  	Data: Data: spectral, [1, 1, 1356], 1, 1356, 1, None
  	 Target:FOUND_CLASS: 1, FOUND_CONF: 0.99817, TARGET_CLASS: n/a, TARGET_CONFIDENCE: n/a
  	prediction function: <function OnnxRunner.gen_prediction_function.<locals>.<lambda> >
  	ResponsibilityMaps: {1: 1}
  	run statistics: {'total_passing': 42, 'total_failing': 0, 'max_depth_reached': 2, 'avg_box_size': 180.375} (5 dp)
  	sufficiency mask: tensor([[ True,  True,  True,  ...,  True,  True, False]])
  	explanation confidence: 0.9981679916381836
# ---
# name: test__explanation_snapshot[1].1
  6149703305100586930
# ---
# name: test__explanation_snapshot[64]
  Explanation:
  	CausalArgs: <class 'rex_xai.input.config.CausalArgs'>
  	Data: Data: spectral, [64, 1, 1356], 1, 1356, 1, None
  	 Target:FOUND_CLASS: 1, FOUND_CONF: 0.99817, TARGET_CLASS: n/a, TARGET_CONFIDENCE: n/a
  	prediction function: <function OnnxRunner.gen_prediction_function.<locals>.<lambda> >
  	ResponsibilityMaps: {1: 1}
  	run statistics: {'total_passing': 42, 'total_failing': 0, 'max_depth_reached': 2, 'avg_box_size': 180.375} (5 dp)
  	sufficiency mask: tensor([[ True,  True,  True,  ...,  True,  True, False]])
  	explanation confidence: 0.9981644749641418
# ---
# name: test__explanation_snapshot[64].1
  6149703305100586930
# ---
